Finalizada navbar inicial

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <img src="img/logo-mangaflix.png" alt="Logo MANGAFLIX" />
+        <div class="container navbar">
+            <img class="logo" src="img/logo-mangaflix.png" alt="Logo MANGAFLIX" />
             <nav>
                 <a href="#">Inicio</a>
                 <a href="#">Ação</a>
