Finalizada cover inicial

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,12 @@
     <link rel="stylesheet" href="./style/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" />
     <title>Mangaflix</title>
 </head>
+
 <body>
     <header>
         <div class="container navbar">
@@ -21,5 +26,31 @@
             </nav>
         </div>
     </header>
+    <main>
+        <div class="manga-principal">
+            <div class="container">
+                <h3 class="titulo">NANATSU NO TAZAI</h3>
+                <p class="descricao">Os “Sete Pecados Capitais”, um grupo maligno de cavaleiros que conspiraram
+                    para derrubar o reino de Britânia, supostamente foram erradicados pelos Cavaleiros Divinos,
+                    embora ainda existam rumores de que eles estão vivos. Dez anos depois, os Cavaleiros Divinos
+                    realizaram um golpe de estado e assassinaram o rei, se tornando os novos e tiranos governantes
+                    do reino. Elizabeth, a única filha do rei, sai em uma jornada para encontrar os “Sete Pecados
+                    Capitais”,
+                    e recrutá-los para que possam ajudar a tomar o reino de volta!!!
+                </p>
+
+                <div class="botoes">
+                    <button role="button" class="botao">
+                        <i class="fab fa-readme"></i> LER AGORA
+                    </button>
+
+                    <button role="button" class="botao">
+                        <i class="fas fa-info-circle"></i> MAIS INFORMAÇÕES
+                    </button>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
