--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" />
+
+    <!--Responsividade-->
+    <link rel="stylesheet" href="style/responsive.css">
+
+    <!--owl css-->
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+
     <title>Mangaflix</title>
 </head>
 
@@ -32,11 +40,7 @@
                 <h3 class="titulo">NANATSU NO TAZAI</h3>
                 <p class="descricao">Os “Sete Pecados Capitais”, um grupo maligno de cavaleiros que conspiraram
                     para derrubar o reino de Britânia, supostamente foram erradicados pelos Cavaleiros Divinos,
-                    embora ainda existam rumores de que eles estão vivos. Dez anos depois, os Cavaleiros Divinos
-                    realizaram um golpe de estado e assassinaram o rei, se tornando os novos e tiranos governantes
-                    do reino. Elizabeth, a única filha do rei, sai em uma jornada para encontrar os “Sete Pecados
-                    Capitais”,
-                    e recrutá-los para que possam ajudar a tomar o reino de volta!!!
+                    embora ainda existam rumores de que eles estão vivos.
                 </p>
 
                 <div class="botoes">
@@ -51,6 +55,46 @@
             </div>
         </div>
     </main>
+
+    <div class="carrosel-mangas">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-manga" src="/img/min1.jpg">
+            </div>
+            <div class="item">
+                <img class="box-manga" src="/img/min2.jpg">
+            </div>
+            <div class="item">
+                <img class="box-manga" src="/img/min3.jpg">
+            </div>
+            <div class="item">
+                <img class="box-manga" src="/img/min4.jpg">
+            </div>
+            <div class="item">
+                <img class="box-manga" src="/img/min5.jpg">
+            </div>
+            <div class="item">
+                <img class="box-manga" src="/img/min6.jpg">
+            </div>
+            <div class="item">
+                <img class="box-manga" src="/img/min7.jpg">
+            </div>
+            <div class="item">
+                <img class="box-manga" src="/img/min8.jpg">
+            </div>
+            <div class="item">
+                <img class="box-manga" src="/img/min9.jpg">
+            </div>
+            <div class="item">
+                <img class="box-manga" src="/img/min10.jpg">
+            </div>
+        </div>
+    </div>
+
+
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/setup.js"></script>
 </body>
 
 </html>
