Add pages, nanatsu

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <div class="container navbar">
-            <img class="logo" src="img/logo-mangaflix.png" alt="Logo MANGAFLIX" />
+            <a href="/index.html"><img class="logo" src="/img/logo-mangaflix.png" alt="Logo MANGAFLIX" /></a>
             <nav>
                 <a href="#">Inicio</a>
                 <a href="#">Ação</a>
@@ -44,13 +44,11 @@
                 </p>
 
                 <div class="botoes">
-                    <button role="button" class="botao">
-                        <i class="fab fa-readme"></i> LER AGORA
-                    </button>
-
-                    <button role="button" class="botao">
-                        <i class="fas fa-info-circle"></i> MAIS INFORMAÇÕES
-                    </button>
+                    <a href="./pages/nanatsu-read-now.html">
+                        <button role="button" class="botao">
+                            <i class="fab fa-readme"></i> LER AGORA
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
